--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -2908,7 +2908,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Mute"
+            "value" : "Ljud av"
           }
         },
         "zh-Hans" : {
@@ -2930,7 +2930,7 @@
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Muted"
+            "value" : "Ljud av"
           }
         },
         "zh-Hans" : {
@@ -3003,6 +3003,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "我的直播流"
+          }
+        }
+      }
+    },
+    "My widget" : {
+      "localizations" : {
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Min widget"
           }
         }
       }
