Zoom speed setting.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -3743,6 +3743,9 @@
         }
       }
     },
+    "Speed" : {
+
+    },
     "SRT Live Server (SLS)" : {
       "localizations" : {
         "es" : {
